Started fleshing out documentation.

--- a/engineer/themes/dark_rainbow/metadata.yaml
+++ b/engineer/themes/dark_rainbow/metadata.yaml
@@ -1,4 +1,5 @@
 name: 'Dark Rainbow'
+id: dark_rainbow
 description: A dark theme with just a hint of color.
 author: 'Tyler Butler <tyler@tylerbutler.com>'
 website: 'http://tylerbutler.com'
