Major work on Emma. She's almost done!

--- a/sample_site/config.yaml
+++ b/sample_site/config.yaml
@@ -1,6 +1,6 @@
 SITE_TITLE: Engineer Site
 HOME_URL: '/'
-SITE_URL: http://example.com
+SITE_URL: http://static.tylerbutler.com
 
 PUBLISH_DRAFTS: yes
 
