--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ html5lib>=0.90
 Pynq>=0.4.0.Pineapple
 python-dateutil==1.5
 zope.cachedescriptors>=3.5.1
+humanize>=0.2
 -e git://github.com/hyde/typogrify#egg=typogrify
