--- a/sample_site/debug.yaml
+++ b/sample_site/debug.yaml
@@ -2,7 +2,7 @@ SITE_TITLE: Engineer Site
 HOME_URL: '/'
 SITE_URL: http://localhost:8080
 
-PUBLISH_DRAFTS: yes
+PUBLISH_DRAFTS: no
 
 THEME_SETTINGS:
   typekit_id: vty2qol
