--- a/sample_site/debug.yaml
+++ b/sample_site/debug.yaml
@@ -1,11 +1,2 @@
-SITE_TITLE: Engineer Site
-HOME_URL: '/'
-SITE_URL: http://localhost:8080
-
-PUBLISH_DRAFTS: no
-
-THEME_SETTINGS:
-  typekit_id: vty2qol
-
+SUPER: base.yaml
 DEBUG: yes
-USE_CLIENT_SIDE_LESS: yes
