--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,5 @@ Pynq>=0.4.0.Pineapple
 python-dateutil==1.5
 zope.cachedescriptors>=3.5.1
 humanize>=0.2
+bottle==0.10.9
 -e git://github.com/hyde/typogrify#egg=typogrify
