Fix time/date handling for posts and RSS feeds.
My goodness dates and times in Python are terrible. I was really hoping I could
get away with the user not having to specify their timezone explicitly, but that
seems to be a pipe dream.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ python-dateutil==1.5
 zope.cachedescriptors>=3.5.1
 humanize>=0.2
 bottle==0.10.9
+pytz==2011k
+times==0.4
 -e git://github.com/hyde/typogrify#egg=typogrify
