Minification of CSS and JS as well as better support for LESS preprocessing.
Also bundled dotless as an included lib for LESS preprocessing on Windows.

--- a/sample_site/base.yaml
+++ b/sample_site/base.yaml
@@ -6,6 +6,7 @@ PUBLISH_DRAFTS: no
 
 THEME_SETTINGS:
   typekit_id: vty2qol
+  twitter_id: tylerbutler
+  tweet_count: 4
 
-USE_CLIENT_SIDE_LESS: yes
-DEFAULT_TIMEZONE: 'America/Los_Angeles'
+POST_TIMEZONE: 'America/Los_Angeles'
