--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ jinja2>=2.6
 compressinja>=0.0.1
 pygments>=1.4
 html5lib>=0.90
-Pynq>=0.4.0.Pineapple
 python-dateutil==1.5
 zope.cachedescriptors>=3.5.1
 humanize>=0.2
 bottle==0.10.9
 pytz==2011k
 times==0.4
+cssmin>=0.1.4
+lpjsmin>=0.4
 -e git://github.com/tylerbutler/typogrify.git#egg=typogrify
