--- a/sample_site/base.yaml
+++ b/sample_site/base.yaml
@@ -3,6 +3,9 @@ HOME_URL: '/'
 SITE_URL: http://localhost:8080
 
 PUBLISH_DRAFTS: no
+POST_DIR:
+  - posts
+  - archives
 
 THEME_SETTINGS:
   typekit_id: vty2qol
