Reorganizing theme files so they make a bit more sense and match the documentation.

--- a/engineer/themes/dark_rainbow/metadata.yaml
+++ b/engineer/themes/dark_rainbow/metadata.yaml
@@ -1,6 +1,6 @@
 name: 'Dark Rainbow'
-id: dark_rainbow
-description: A dark theme with just a hint of color.
+id: 'dark_rainbow'
+description: 'A dark theme with just a hint of color.'
 author: 'Tyler Butler <tyler@tylerbutler.com>'
 website: 'http://tylerbutler.com'
 license: 'Creative Commons BY-SA 3.0'
