Changed logging infrastructure so its more sane and flexible.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ pip-log.txt
 /logs/
 _cache/
 *.cache
-sample_site/output/
-sample_site/_cache/
+engineer/sample_site/output/
+engineer/sample_site/_cache/
+engineer/sample_site/logs/
 _emma_secret.pvt
