Updated sample site to disable PREPROCESS_LESS by default. This was causing problems for some people who don't have lessc installed or aren't on Windows. Defaulting this to off for the sample site seems reasonable. Users who want preprocessing can enable it for their sites. This changes only the default for the sample site. The engineer default (true) hasn't changed.

--- a/engineer/sample_site/config.yaml
+++ b/engineer/sample_site/config.yaml
@@ -2,9 +2,18 @@ SITE_TITLE: Engineer Site
 HOME_URL: '/'
 SITE_URL: http://localhost:8080
 
+POST_DIR:
+  - posts
+  - archives
+
+POST_TIMEZONE: 'America/Los_Angeles'
+
 PUBLISH_DRAFTS: no
 
 THEME_SETTINGS:
   typekit_id: vty2qol
+  twitter_id: tylerbutler
+  tweet_count: 4
 
-DEBUG: yes
+PREPROCESS_LESS: no
+DEBUG: no
