--- a/engineer/sample_site/config.yaml
+++ b/engineer/sample_site/config.yaml
@@ -11,9 +11,12 @@ POST_TIMEZONE: 'America/Los_Angeles'
 PUBLISH_DRAFTS: no
 
 THEME_SETTINGS:
-  typekit_id: vty2qol
+  typekit_id: lvr3vky
   twitter_id: tylerbutler
   tweet_count: 4
+  #typekit_id: vty2qol
 
 PREPROCESS_LESS: no
 DEBUG: no
+
+THEME: oleb
