--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include *.txt *.py *.md *.markdown
 recursive-include engineer *.*
 
 prune docs
+prune .tox
 prune engineer/sample_site/output
 prune engineer/sample_site/_cache
 
