--- a/engineer/themes/oleb/metadata.yaml
+++ b/engineer/themes/oleb/metadata.yaml
@@ -3,7 +3,7 @@ id: oleb
 description: "A bright design based on Ole Begemann's oleb.net. Used with permission."
 author: 'Tyler Butler <tyler@tylerbutler.com>'
 website: 'http://tylerbutler.com'
-license: 'Creative Commons BY-SA 3.0'
+license: 'N/A'
 use_foundation: yes
 use_lesscss: yes
 use_modernizr: yes
