Update tox config to also run a build of the sample site.

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,19 @@
 [tox]
 envlist = py27,docs
 
-[testenv]
+[testenv:py27]
 deps=nose
-commands=nosetests
+commands=
+    nosetests
+
+[testenv:build]
+changedir={envtmpdir}
+commands=
+    engineer init
+    engineer build -s config.yaml -vc
+    engineer build -s oleb.yaml -vc
 
 [testenv:docs]
-basepython=python
 changedir=engineer/docs_source
 deps=sphinx
 commands=sphinx-build -n -E -b html .  {envtmpdir}/html
