Add simple search support to OleB theme.
Closes bug #29.

Also added a feed link to the sidebar, which closes bug #30.
Also cleaned up a some of the Dark Rainbow docs.

--- a/engineer/themes/oleb/metadata.yaml
+++ b/engineer/themes/oleb/metadata.yaml
@@ -13,11 +13,13 @@ use_tweet: yes
 template_dirs:
   - '../_shared/templates/'
 
+copy_content:
+  - ['../_shared/images/rss/04.png', 'images/rss.png']
+
 settings:
-  typekit_id: null
+  typekit_id: ~
   twitter_id: tylerbutler
   tweet_count: 4
   comments: ~
   comments_account: ~
-
-self_contained: yes
+  simple_search: yes
