Add support for Atom feeds.
RSS feeds are still output, but Atom is the default.

Fixes #56.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cssmin>=0.1.4
 lpjsmin>=0.4
 brownie>=0.5
 propane>=0.1.2
+feedgenerator>=1.7
 
 # engineer-specific fork of typogrify
 typogrify-engineer>=2.0.0
