--- a/engineer/sample_site/config.yaml
+++ b/engineer/sample_site/config.yaml
@@ -1,6 +1,6 @@
 SITE_TITLE: Engineer Site
 HOME_URL: '/'
-SITE_URL: http://localhost:8080
+SITE_URL: http://localhost:8000
 
 POST_DIR:
   - posts
@@ -10,10 +10,7 @@ POST_TIMEZONE: 'America/Los_Angeles'
 
 PUBLISH_DRAFTS: no
 
-THEME_SETTINGS:
-  typekit_id: lvr3vky
-
-PREPROCESS_LESS: no
+PREPROCESS_LESS: yes
 DEBUG: no
 
 THEME: oleb
