Tox and nosetest config updates.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,18 @@
 [tox]
-envlist = py27,docs
+envlist = py27,upgrade,docs
 
 [testenv:py27]
 deps=
     nose
     testfixtures
+commands=
+    nosetests
+
+[testenv:upgrade]
+deps=
+    nose
+    testfixtures
+    engineer
 commands=
     nosetests
 
