--- a/engineer/themes/dark_rainbow/metadata.yaml
+++ b/engineer/themes/dark_rainbow/metadata.yaml
@@ -15,6 +15,8 @@ template_dirs:
 
 copy_content:
   - ['../_shared/images/rss/37.png', 'images/rss.png']
+  - ['../_shared/less/', 'stylesheets/shared/']
+  - ['../_shared/code_styles/_solarized.less', 'stylesheets/shared/_solarized.less']
 
 settings:
   typekit_id: ~
