Update tox config.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps=
     nose
     testfixtures
 commands=
-    nosetests
+    nosetests engineer/unittests
 
 [testenv:upgrade]
 deps=
@@ -14,12 +14,12 @@ deps=
     testfixtures
     engineer
 commands=
-    nosetests
+    nosetests engineer/unittests
 
 [testenv:build]
 changedir={envtmpdir}
 commands=
-    engineer init
+    engineer init --sample
     engineer build -s config.yaml -vc
     engineer build -s oleb.yaml -vc
 
