Remove requirement to declare the 'global bundles' used in a theme.
Everything is now declared in the bundles.yaml file in the theme itself,
and themes can include the relevant asset bundles directly in their
templates if needed.

--- a/engineer/themes/dark_rainbow/bundles.yaml
+++ b/engineer/themes/dark_rainbow/bundles.yaml
@@ -2,4 +2,18 @@ dark_rainbow:
   filters: less, cssmin
   contents:
     - './static/stylesheets/dark_rainbow.less'
+    - foundation_css
   output: dark_rainbow.%(version)s.css
+
+#dark_rainbow_js:
+#  filters: jsmin
+#  contents:
+#    - jquery
+#    - dark_rainbow_js_no_jquery
+#  output: dark_rainbow.%(version)s.js
+
+#dark_rainbow_js_no_jquery:
+#  filters: jsmin
+#  contents:
+#    - foundation_js
+#  output: dark_rainbow.no_jquery.%(version)s.js
