--- a/engineer/themes/oleb/bundles.yaml
+++ b/engineer/themes/oleb/bundles.yaml
@@ -2,4 +2,5 @@ oleb:
   filters: less, cssmin
   contents:
     - './static/stylesheets/oleb.less'
+    - foundation_css
   output: oleb.%(version)s.css
