--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 # command to install dependencies
 install:
   - "pip install ."
-  - "pip install -r requirements_docs.txt"
+  - "pip install -r requirements_tests.txt"
 # command to run tests
 script: nosetests
