--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.2.0
+arrow>=0.4.4
 bottle>=0.10.9
 brownie>=0.5
 cssmin>=0.1.4
@@ -13,9 +14,7 @@ path.py>=2.2.2
 propane>=0.1.2
 pygments>=1.4
 python-dateutil>=2.1
-pytz>=2011k
 pyYAML>=3.10
-times>=0.6
 translitcodec>=0.2
 webassets
 
