--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,14 @@
 # Auto detect text files and perform LF normalization 
 * text=auto
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.txt text
+*.md text
+*.html text
+*.py text
+*.js text
+*.css text
+*.less text
+*.yaml text
+*.yml text
