Fix tox configs.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py27,upgrade,docs
 deps=
     nose
     testfixtures
+    clint
 commands=
     nosetests engineer/unittests
 
@@ -12,6 +13,7 @@ commands=
 deps=
     nose
     testfixtures
+    clint
     engineer
 commands=
     nosetests engineer/unittests
@@ -25,5 +27,8 @@ commands=
 
 [testenv:docs]
 changedir=engineer/docs_source
-deps=sphinx
+deps=
+    sphinx
+    sphinx_rtd_theme
+    argh
 commands=sphinx-build -n -E -b html .  {envtmpdir}/html
