--- a/engineer/unittests/test_data/simple_site/lazy_links_persist.yaml
+++ b/engineer/unittests/test_data/simple_site/lazy_links_persist.yaml
@@ -1,7 +1,10 @@
 SUPER: config.yaml
 
-FINALIZE_METADATA: yes
-LAZY_LINKS_PERSIST: yes
+FINALIZE_METADATA:
+  enabled: yes
+
+LAZY_LINKS:
+  persist: yes
 
 PLUGIN_PERMISSIONS:
   MODIFY_RAW_POST:
