--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "normalize.css",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Normalize.css as a node packaged module",
   "style": "normalize.css",
   "files": [
+    "LICENSE.md",
     "normalize.css"
   ],
   "homepage": "http://necolas.github.io/normalize.css",
@@ -11,6 +12,7 @@
     "type": "git",
     "url": "git://github.com/necolas/normalize.css.git"
   },
+  "main": "normalize.css",
   "author": "Nicolas Gallagher",
   "license": "MIT"
 }
