Update Travis config to workaround shallow clone issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 # command to install dependencies
 install:
+  - "git fetch --unshallow"
   - "pip install ."
   - "pip install -r requirements_tests.txt"
   - "pip install coveralls"
