--- a/engineer/_themes/dark_rainbow/bundles.yaml
+++ b/engineer/_themes/dark_rainbow/bundles.yaml
@@ -6,21 +6,10 @@ dark_rainbow_css:
   output: dark_rainbow.%(version)s.css
 
 dark_rainbow_css_bigfoot:
-  filters: cssmin
+  filters: less, cssmin
   contents:
     - bigfoot_css
+    - './static/stylesheets/bigfoot.less'
     - dark_rainbow_css
   output: dark_rainbow_bigfoot.%(version)s.css
 
-#dark_rainbow_js:
-#  filters: jsmin
-#  contents:
-#    - jquery
-#    - dark_rainbow_js_no_jquery
-#  output: dark_rainbow.%(version)s.js
-
-#dark_rainbow_js_no_jquery:
-#  filters: jsmin
-#  contents:
-#    - foundation_js
-#  output: dark_rainbow.no_jquery.%(version)s.js
