--- a/engineer/_themes/dark_rainbow/metadata.yaml
+++ b/engineer/_themes/dark_rainbow/metadata.yaml
@@ -17,7 +17,8 @@ settings:
   comments: ~
   comments_account: ~
   simple_search: yes
-  enable_bigfoot: no
+  bigfoot:
+    enabled: yes
   sharing:
     enabled: no
     facebook:
