Pin dependency versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-appdirs==1.2.0
-bottle>=0.10.9
-brownie>=0.5
-cssmin>=0.1.4
-feedgenerator>=1.7
-flufl.enum>=3.3.1
+appdirs==1.4.3
+bottle==0.12.13
+brownie==0.5.1
+cssmin==0.2.0
+feedgenerator==1.9
+flufl.enum==4.1.1
 html5lib==0.90
-humanize>=0.2
-jinja2>=2.6
-lpjsmin>=0.4
-markdown>=2.2
-path.py>=2.2.2
-propane>=0.1.2
-pygments>=1.4
-python-dateutil>=2.1
-pytz>=2011k
-pyYAML>=3.10
+humanize==0.5.1
+Jinja2==2.9.6
+lpjsmin==0.5
+markdown==2.6.8
+path.py>=9.0,<10.0
+propane>=0.2.1
+pygments==2.2.0
+python-dateutil==2.6.0
+pytz>=2017.2
+pyYAML==3.12
 times==0.6.2
-translitcodec>=0.2
+translitcodec==0.4.0
 
 # engineer-specific fork of typogrify
 typogrify-engineer>=2.0.0
